--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "c270_app",
+  "name": "project",
   "version": "1.0.0",
-  "description": "project description",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mysql2": "^2.3.3"
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "mysql2": "^3.10.2"
   }
 }
