--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,19 +41,19 @@ jobs:
 
       - name: Login to Docker Hub
         run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker image
         run: docker push c270_app:latest
 
       - name: Deploy to Docker Swarm
-        uses: appleboy/ghaction-ssh@master
+        uses: garygrossgarten/github-action-ssh@v0.1.1
         with:
+          command: |
+            docker stack deploy --compose-file docker-compose.yml c270-stack
           host: ${{ secrets.SWARM_HOST }}
           username: ${{ secrets.SWARM_USERNAME }}
-          key: ${{ secrets.SWARM_PRIVATE_KEY }}
-          script: |
-            docker stack deploy --compose-file docker-compose.yml c270-stack
+          privateKey: ${{ secrets.SWARM_PRIVATE_KEY }}
 
   
 
