--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "python -m unittest test_todolist_app.py"
+    "test": "python -m unittest discover -s . -p 'test_todolist_app.py'"
   },
   "keywords": [],
   "author": "",
