--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,28 +7,28 @@ on:
     branches: [main, Development]
 
 jobs:
-  test-and-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
 
-      - name: Install Node.js dependencies
-        run: npm install
+    - name: Install Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
 
-      - name: Run Node.js tests
-        run: npm test
+    - name: Install npm dependencies
+      run: npm install
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
+    - name: Run Python tests
+      run: python -m unittest discover -s . -p 'test_todolist_app.py'
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Run Node.js tests
+      run: npm test
