--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
-name: C270_CI/CD
+name: CI/CD Pipeline
 
-on:
-  push:
-    branches: [main, Development]
-  pull_request:
-    branches: [main, Development]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -19,7 +15,15 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Node.js
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run Python tests
+      run: python -m unittest discover -s . -p 'test_todolist_app.py'
+
+    - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16'
@@ -27,8 +31,16 @@ jobs:
     - name: Install npm dependencies
       run: npm install
 
-    - name: Run Python tests
-      run: python -m unittest discover -s . -p 'test_todolist_app.py'
-
     - name: Run Node.js tests
       run: npm test
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/c270-webapp:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/c270-webapp:latest
