--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: C270 CI/CD Pipeline
 
 on: [push, pull_request]
 
@@ -15,14 +15,10 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
     - name: Run Python tests
       run: python -m unittest discover -s . -p 'test_todolist_app.py'
 
+    # Node.js setup and tests
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
@@ -34,6 +30,7 @@ jobs:
     - name: Run Node.js tests
       run: npm test
 
+    # Docker build and push
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
