--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,23 @@
 name: C270 CI/CD Pipeline
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    # Docker build and push
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        run: echo 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 | docker login -u Dhiveyasree --password-stdin
 
-    - name: Build and push Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/c270-webapp:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/c270-webapp:latest
+      - name: Build Docker image
+        run: docker build . -t your-image-name
 
-    # Docker Swarm deployment
-    - name: Deploy to Docker Swarm
-      run: |
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker service update --image ${{ secrets.DOCKER_USERNAME }}/c270-webapp:latest c270-webapp
+      - name: Push Docker image
+        run: docker push your-image-name
