--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
-        run: echo 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 | docker login -u Dhiveyasree --password-stdin
+        run: echo 654321devops | docker login -u dhiveya --password-stdin
 
       - name: Build Docker image
         run: docker build . -t your-image-name
